--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,7 +1,7 @@
 <ion-grid class="banner-wrapper">
     <ion-row class="bannerContainer">
         <ion-row class="imgSection">
-            <ion-img src="/assets/newImages/Handshake.png"></ion-img>
+            <ion-img [src]="data.bannerimage"></ion-img>
         </ion-row>
         <ion-row class="reqDemoSection">
             <ion-text class="text-2xl mb-3">
