--- a/src/app/components/storestypes/stores.component.html
+++ b/src/app/components/storestypes/stores.component.html
@@ -9,8 +9,8 @@
             <ion-slide *ngFor="let store of stores">
                 <ion-grid class="storesCarouselContainer">
 
-                    <ion-img src="{{store.img}}" class="w-56 h-[28rem] object-contain"></ion-img>
-                    <ion-text class="mt-9 text-black font-medium text-xl uppercase">{{store.storeType}}</ion-text>
+                    <ion-img src="{{store.image}}" class="w-56 h-[28rem] object-contain"></ion-img>
+                    <ion-text class="mt-9 text-black font-medium text-xl uppercase">{{store.name}}</ion-text>
 
                 </ion-grid>
             </ion-slide>
