--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,13 +1,13 @@
-<ion-content>
+<ion-content *ngIf="data!=null">
     <Header id="header"></Header>
 
-    <Banner></Banner>
+    <Banner  [data]="data.metadata[0]" ></Banner>
     
-    <Stores></Stores>
+    <Stores [data]="data.shoptype"></Stores>
     
-    <Features></Features>
+    <Features [data]="data.feature"></Features>
 
-    <MyybaPlans></MyybaPlans>
+    <MyybaPlans [data]="data.subscriptions"></MyybaPlans>
 
-    <Myybaservices></Myybaservices>
+    <Myybaservices [data]="data.services"></Myybaservices>
 </ion-content>
