Update: Fix Styling / 3 New Component & 1 need API

--- a/src/app/components/myybaservices/myybaservices.component.html
+++ b/src/app/components/myybaservices/myybaservices.component.html
@@ -8,9 +8,9 @@
                 <ion-text class="text-lg">
                     {{ourService.serviceSummary}}
                 </ion-text>
-                <ion-button color="service-black-demo" class="service-demo-btn">
-                    Take a free demo
-                    <!-- <ion-icon name="chevron-forward-outline"></ion-icon> -->
+                <ion-button class="serivce-demo-btn">
+                    Take a Demo
+                    <ion-icon name="chevron-forward-outline"></ion-icon>
                 </ion-button>
             </ion-row>
             <ion-img [src]="ourService.serviceImg"></ion-img>
