--- a/src/app/components/myybaservices/myybaservices.component.scss
+++ b/src/app/components/myybaservices/myybaservices.component.scss
@@ -33,8 +33,7 @@
     max-width: 26rem;
 }
 
-ion-button.ion-color-service-black-demo {
-    --background: red;
-    font-size: 1.125rem;
-    letter-spacing: -0.025em;
+.serivce-demo-btn {
+    width: 50%;
+    --background: black;
 }
