--- a/src/app/pages/homepage/homepage.component.scss
+++ b/src/app/pages/homepage/homepage.component.scss
@@ -1,85 +1,6 @@
-.myybaKnowMore-wrapper {
-    display: flex;
+.serviceSectionTitle {
     justify-content: center;
-
-    // padding: 0 1.25rem;
-    position: relative;
-    background-image: linear-gradient(to right, rgb(231, 231, 231), rgba(220, 222, 223, 0));
-}
-
-.container {
-    max-width: 1240px !important;
-}
-
-#header {
-    position: fixed;
-    width: 100%;
-    background: white;
-    z-index: 9;
-}
-
-.discussImage-container {
-    margin-right: auto;
-}
-
-.discussImg {
-    width: 34rem;
-}
-
-@media only screen and (min-width: 1200px) {
-    .discussImg {
-        width: 50rem;
-    }
-}
-
-.myybaKnowMore-Section {
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    flex-direction: column;
-
-    position: absolute;
-    text-align: right;
-    width: 65%;
-    height: 100%;
-    z-index: 3;
-
-    background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, .9), rgba(255, 255, 255, 1));
-}
-
-.myybaKnowMoreQuestion {
-    width: 55%;
-
-    flex-direction: column;
-    align-items: flex-end;
-}
-
-@media only screen and (min-width: 1280px) {
-    .myybaKnowMore-description {
-        height: 28rem;
-
-        padding-right: 0;
-    }
-
-    .btn-knowMore {
-        width: 13rem;
-    }
-
-    .myybaKnowMoreQuestion {
-        width: 40%;
-    }
-
-}
-
-.btn-knowMore {
-    width: 9rem;
-}
-
-.btn-knowMore>span {
-    font-weight: 700;
-}
-
-ion-button.ion-color-whatsapp {
-    --ion-color-base: linear-gradient(to left, #0DA340, #05752B, #00A037AB) !important;
-
+    background: #EFEFEF;
+    align-items: center;
+    padding: 2rem 0;
 }
