--- a/src/app/components/features/features.component.scss
+++ b/src/app/components/features/features.component.scss
@@ -1,6 +1,7 @@
 .features_details-wrapper {
     display: flex;
     justify-content: center;
+    padding: 10px;
 }
 
 .featuresDetails-Container {
