--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -6,21 +6,35 @@
         <ion-row class="navLinks space-y-3">
             <ion-text>Home</ion-text>
             <ion-text>Products and Services</ion-text>
-            <ion-text>About</ion-text>
-            <ion-text>Careers</ion-text>
+            <ion-text (click)="routeTo('about')">About</ion-text>
+            <ion-text (click)="routeTo('career')">Careers</ion-text>
         </ion-row>
         <ion-row class="formalities space-y-3">
-            <ion-text>Privacy</ion-text>
-            <ion-text>Terms and Condition</ion-text>
+            <ion-text (click)="routeTo('privacy')">Privacy</ion-text>
+            <ion-text (click)="routeTo('terms')">Terms and Condition</ion-text>
         </ion-row>
         <ion-row class="footerLinks space-y-3">
-            <ion-text>{{data.mail}}</ion-text>
-            <ion-text>+{{data.whatsapp_number}}</ion-text>
+            <ion-text (click)="mailTo(data.mail)">{{data.mail}}</ion-text>
+            <ion-text (click)="callTo(data.whatsapp_number)">+{{data.whatsapp_number}}</ion-text>
             <ion-row class="myybaSocialLinks space-x-3">
-                <ion-icon name="logo-youtube"></ion-icon>
-                <ion-icon name="logo-instagram"></ion-icon>
-                <ion-icon name="logo-facebook"></ion-icon>
+                <ion-icon (click)="goTo('')" name="logo-youtube"></ion-icon>
+                <ion-icon (click)="goTo('')" name="logo-instagram"></ion-icon>
+                <ion-icon (click)="goTo('')" name="logo-facebook"></ion-icon>
             </ion-row>
         </ion-row>
     </ion-row>
 </ion-grid>
+<ion-row class="copyright-container">
+    <ion-row class="copyright-row">
+    <ion-row class="formalities space-y-3">
+        <ion-text class="copyright-text">
+            © 2022 All rights Reserved by Myyba Shops.
+        </ion-text>
+    </ion-row>
+    <ion-row class="formalities space-y-3">
+        <ion-text class="copyright-links">
+            <a (click)="routeTo('about')">About</a>  | <a (click)="routeTo('terms')">Terms & Conditions</a> | <a (click)="routeTo('privacy')">Privacy Policy</a> | <a href="https://eat.myyba.com">Myyba Eats</a>
+         </ion-text>
+    </ion-row>
+    </ion-row>
+</ion-row>
