--- a/src/app/pages/homepage/homepage.component.scss
+++ b/src/app/pages/homepage/homepage.component.scss
@@ -1,6 +1,6 @@
 .serviceSectionTitle {
     justify-content: center;
-    background: #EFEFEF;
+    background: white;
     align-items: center;
     padding: 2rem 0;
 }
