--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -6,6 +6,21 @@
     background: black;
 }
 
+.copyright-container{
+    background: whitesmoke;
+    display: flex;
+    justify-content: center;
+    flex: .75;
+    padding: 3rem 0;
+}
+.copyright-row{
+    display: flex;
+    justify-content: space-between;
+    flex: .75;
+}
+
+
+
 .footerContainer {
     display: flex;
     justify-content: space-between;
