--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
             <ion-text class="text-sm font-light tracking-[0.7em] leading-[0.25rem]">shops</ion-text>
         </ion-row>
         <ion-row class="webNaviSection space-x-7 uppercase">
-            <ion-text title="Home" class="text-lg hover-underline-animation">Home</ion-text>
+            <ion-text title="Home" (click)="routeTo('/')" class="text-lg hover-underline-animation">Home</ion-text>
             <ion-text title="Products & Service" class="text-lg hover-underline-animation">
                 Products & Service
                 <ion-icon name="chevron-down-outline"></ion-icon>
