--- a/src/app/components/storestypes/stores.component.scss
+++ b/src/app/components/storestypes/stores.component.scss
@@ -23,7 +23,10 @@
     margin-bottom: 3rem;
 
     box-shadow: none !important;
-    
+}
+
+ion-slides.swiper-wrapper {
+    justify-content: center;
 }
 
 
