--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -1,27 +1,31 @@
-.serviceSectionTitle {
+.about-banner-wrapper {
+    display: flex;
     justify-content: center;
+
     background: #EFEFEF;
+}
+
+.bannerContainer{
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-    padding: 2rem 0;
+    flex: .75;
+    
+    padding: 6.5rem 0;
 }
-.first-container{
-    background-color: #EFEFEF;
 
+.about-bannerContentContainer {
+    display: flex;
+    width: 22rem;
+    
 }
-.header{
-  
+
+.visionAndMission-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    max-width: 38rem;
+    margin: 4rem auto;
     text-align: center;
-    justify-content: center;
-    text-decoration: underline;
-    text-transform: capitalize;
-}
-.second-container{
-    background-color: white;
-
-}
-.about-container{
-    padding: 0 11rem;
-}
-p{
-    text-align: justify;
 }
